Add GetByFilter function in base service and implement it on country model and so Add handler route for that.
